--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/mthakodate53/CA_Final_Task/issues"
   },
-  "homepage": "https://github.com/mthakodate53/CA_Final_Task#readme"
+  "homepage": "https://github.com/mthakodate53/CA_Final_Task#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.7.0"
+  }
 }
